app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-will-playground
  labels:
    app: argocdrocks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocdrocks
  template:
    metadata:
      labels:
        app: argocdrocks
    spec:
      containers:
      - name: will-playground
        image: wil42/playground:v1
        ports:
        - containerPort: 80
        volumeMounts:
