app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocdrocks
  name: service-will-playground
spec:
  type: ClusterIP
  selector:
    app: argocdrocks
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8888
